# Python_test_de

./: pyproject.toml  pytest.ini  readme.md
Data_test/: clinical_trials.csv  drugs.csv  output.json
Python/: main.py
Python/ad_hoc/: bonus.py
Python/src/: __init__.py  data_preprocessing.py  data_processing.py  data_reading.py
Python/tests/: __init__.py  test_data_preprocessing.py  test_data_processing.py  test_data_reading.py  test_data_writting.py  test_main.py
Results/: output.json
SQL/python/: query_1.py  query_2.py
SQL/sql/: query_1.sql  query_2.sql
